# learning-rl-jax

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.py  tabular_q.py  tabular_q_her.py  tabular_q_her_np.py  tabular_q_np.py  test.py  test_env.py
algos/: base.py  linearly_interpolated_tabular_q.py
core/: sample_networks.py
core/algos/: a2c.py  base.py  dqn.py  linearly_interpolated_tabular_q.py  ppo.py  sac.py  tabular_q.py  tabular_q_learning.py  td3.py
core/envs/: base.py  brax.py  gymnax.py  gymnax_wrapper.py  jumanji.py  jumanji_wrapper.py  mujoco_playground.py  utils.py  wrappers.py
core/utils/: __init__.py  batch_utils.py  buffers.py  func_utils.py  jax_utils.py  linearly_interpolated_table.py  math.py  misc.py  networks.py  nnx_modules.py  replay_buffer.py  running_mean_var.py
docs/assets/: learning-rl-jax trimmed 10fps720p.gif:Zone.Identifier
envs/: gymnax_wrapper.py
envs/flappy_bird/: __init__.py  flappy_bird_env.py
envs/maze/: maze_env.py
examples/: dqn_jumanji.py  dqn_test.py  jumanji_test.py  lin_interp_tabular_q_acrobot.py  lin_interp_tabular_q_flappy_bird.py  tabular_q_gridworld.py  test.py  test_env.py
examples/a2c/: a2c_brax.py  a2c_mujoco.py  a2c_mujoco_enjoy.py  a2c_test.py
examples/dqn/: dqn_enjoy_test.py  dqn_jumanji.py  dqn_test.py
examples/envs/: brax_test.py  jumanji_test.py  mujoco_test.py  test_env.py
examples/experiments/: README.md  plot.py
examples/ppo/: ppo_mujoco.py  ppo_mujoco_enjoy.py  (+1 more)
learning_rl_jax.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
numpy_testing/: tabular_q_her_np.py  tabular_q_np.py  test.py
utils/: __init__.py  circular_buffer.py  circular_buffer_np.py  linearly_interpolated_table.py  replay_buffer.py
(+48 files in other folders)
