[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "learning-rl-jax"
version = "0.0.1"
requires-python = ">= 3.10"
dependencies = [
  "gymnasium==1.2.0",
  "jax==0.6.2",
  "numpy==2.2.6",
  "pygame==2.6.1",
  "typing_extensions==4.15.0",
  "flax==0.10.7",
  "gymnax==0.0.9",
  "chex==0.1.90",
  "jumanji==1.1.1"
]
authors = [
  {name = "Jim Ma", email = "jim.majk350@gmail.com"}
]
maintainers = [
  {name = "Jim Ma", email = "jim.majk350@gmail.com"}
]
description = "Sample RL environments and algorithms implemented in Jax."
readme = "README.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*"]